<resources>
    <string name="app_name">NovoPaint</string>
    <string name="app_splash">Splash</string>
    <string name="app_start">Start</string>
    <string name="app_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_about">About</string>
    <string name="app_main">Main</string>
    <string name="app_palette">Palette</string>
    <string name="app_map">Map</string>
    <string name="app_start_drawing">Start Drawing</string>
    <string name="pick_color">Choose Color</string>
    <string name="pick">Choose</string>
</resources>